%%{init: {"class": {"nodeSpacing": 25, "rankSpacing": 25, "padding": 10}}}%%
classDiagram
    class InventoryService {
        +processSaleForOrder(Order order, int recordedBy, bool skipStockValidation) array
        +decreaseStockForOrder(array items, bool skipStockValidation) array
        +decreaseStockForIngredient(int ingredientId, float quantity, array context) array
        +canFulfillOrder(array items) array
        -deductIngredientStock(int ingredientId, float requiredQuantity, array context, bool skipStockValidation) array
        -recordDailyIngredientUsage(Ingredient ingredient, float usedQuantity, string usageDate) void
    }

    class MenuStockService {
        +deductMenuStockBatch(int menuStockId, float requiredQuantity, array context, bool skipStockValidation) array
        +processSaleForOrderMenuStock(Order order, int recordedBy) array
        +canFulfillOrderMenuStock(array items) array
    }

    class StockReconciliationService {
        +createManualAdjustment(int ingredientId, float quantity, string adjustmentType, string reason, int reportedBy, string adjustedAt) StockAdjustment
    }

    class MenuStockReconciliationService {
        +createManualAdjustment(int menuStockId, float quantity, string adjustmentType, string reason, int reportedBy, string adjustedAt) MenuStockAdjustment
    }

    class MenuObserver {
        +created(Menu menu) void
        +saved(Menu menu) void
        +deleting(Menu menu) void
        +restored(Menu menu) void
    }

    class MenuIngredientObserver {
        +created(MenuIngredient menuIngredient) void
        +updated(MenuIngredient menuIngredient) void
        +deleted(MenuIngredient menuIngredient) void
        -refreshMenuStockFlag(int menuId) void
    }

    InventoryService --> MenuStockService : delegates no-recipe deduction
    StockReconciliationService --> InventoryService : uses for decrease
    MenuStockReconciliationService --> MenuStockService : uses for decrease
    MenuObserver --> MenuStock : creates on non-recipe menu
    MenuIngredientObserver --> Menu : refreshes stock flag
